# MPI-CUDA-hybrid_HelloWorld

./: .gitignore  CMakeLists.txt  README.md  main.cu
